--- a/src/components/header.html
+++ b/src/components/header.html
@@ -50,7 +50,7 @@
                 <ul class="uk-switcher uk-overflow-container">
                   <li>
                     <ul class="menu__categories" uk-accordion>
-                      <li class="uk-open">
+                      <li>
                         <a class="uk-accordion-title" href="#">iPhone</a>
                         <!-- Swiper -->
                         <div class="uk-accordion-content swiper-products">
@@ -944,7 +944,7 @@
           <span>2 шт</span>
         </div>
 
-        <button class="cart__mobile uk-hidden@l" data-uk-toggle="target: #popupOneClick">
+        <button class="cart__mobile uk-hidden@l" data-uk-toggle="target: #popupEddit">
           <svg width="24" height="24" fill="#6344B6">
             <use xlink:href="img/symbol/sprite.svg#cart-icon" />
           </svg>
