--- a/src/sass/layout/_refferal.scss
+++ b/src/sass/layout/_refferal.scss
@@ -1,11 +1,11 @@
 .refferal {
   &__wrapper {
-    padding-top: 20px;
-
     @include screen(xl) {
+      padding: 0;
+    }
+
+    @include screen(l) {
       padding-top: 20px;
-      padding-left: 0;
-      padding-right: 0;
     }
   }
 
