--- a/src/sass/layout/_return-policy.scss
+++ b/src/sass/layout/_return-policy.scss
@@ -34,10 +34,11 @@
 	}
 
 	&__wrapper {
-		padding-top: 20px;
-
 		@include screen(xl) {
 			padding: 0;
+		}
+
+		@include screen(l) {
 			padding-top: 20px;
 		}
 	}
