--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -78,7 +78,14 @@ button {
     height: 100%;
     width: 100vw;
     z-index: -1;
-    background: linear-gradient(360deg, rgb(248, 248, 248) 0%, rgba(255, 255, 255, 0.0001) 100%);
+
+    @include screen(xl) {
+      background-color: rgb(248, 248, 248);
+    }
+
+    @include screen(l) {
+      background: linear-gradient(360deg, rgb(248, 248, 248) 0%, rgba(255, 255, 255, 0.0001) 100%);
+    }
   }
 }
 
