--- a/src/sass/components/_review.scss
+++ b/src/sass/components/_review.scss
@@ -10,7 +10,7 @@
   }
 
   @include screen(l) {
-    padding: 20px 20px 20px 100px;
+    padding: 20px 20px 20px 80px;
   }
 
   &:hover {
@@ -20,19 +20,26 @@
   img {
     position: absolute;
     left: 20px;
-    top: 15px;
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
+
+    @include screen(xl) {
+      top: 20px;
+    }
+
+    @include screen(l) {
+      top: 15px;
+    }
   }
 
   &__name {
-    font: 400 22px/26px FuturaPT; 
+    font: 400 22px/26px FuturaPT;
     color: #30373D;
 
     @include screen(xl) {
       margin-bottom: 5px;
-      padding-left: 80px;
+      padding-left: 60px;
     }
 
     @include screen(l) {
@@ -41,6 +48,8 @@
   }
 
   &__text {
+    position: relative;
+    padding-left: 15px;
     font: normal 14px/26px Roboto;
     color: rgba(48, 55, 61, .9);
 
@@ -51,6 +60,41 @@
     @include screen(l) {
       margin-bottom: 15px;
     }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 9px;
+      left: 0px;
+      width: 7px;
+      height: 7px;
+      border-radius: 50%;
+      background-color: #c2c2c2;
+    }
+
+    &--minus {
+      position: relative;
+      margin-bottom: 10px;
+      padding-left: 15px;
+
+      &::before {
+        background-color: #FF548C;
+      }
+    }
+
+    &--plus {
+      position: relative;
+      margin-bottom: 10px;
+      padding-left: 15px;
+
+      &::before {
+        background-color: #4bd964;
+      }
+    }
+
+    span {
+      font-weight: 600;
+    }
   }
 
   &__date {
@@ -59,7 +103,7 @@
 
     @include screen(xl) {
       margin-bottom: 20px;
-      padding-left: 80px;
+      padding-left: 60px;
     }
   }
 }
