--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -1,10 +1,11 @@
 .article {
   &__wrapper {
-    padding-top: 20px;
+    @include screen(l) {
+      padding-top: 20px;
+    }
 
     @include screen(xl) {
       padding: 0;
-      padding-top: 20px;
     }
   }
 
