--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -22,10 +22,11 @@
   }
 
   &__wrapper {
-    padding-top: 20px;
-
     @include screen(xl) {
       padding: 0;
+    }
+
+    @include screen(l) {
       padding-top: 20px;
     }
   }
