--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -73,9 +73,16 @@
 
     a {
       border-bottom: 1px solid transparent;
-      font: 400 16px/24px FuturaPT;
       color: #333333;
       transition: border .3s, color .3s;
+
+      @include screen(xl) {
+        font: 500 16px/24px FuturaPT;
+      }
+
+      @include screen(l) {
+        font: 400 16px/24px FuturaPT;
+      }
 
       &:hover {
         border-color: #FF548C;
@@ -123,7 +130,7 @@
   &__address {
     margin-bottom: 10px;
     font: normal 14px/26px Roboto;
-      color: rgba(48, 55, 61, .9);
+    color: rgba(48, 55, 61, .9);
 
     @include screen(xl) {
       padding: 0 15px;
