feature: adds eddits for markups and styles

--- a/src/components/account-profile.html
+++ b/src/components/account-profile.html
@@ -52,7 +52,7 @@
               <label for="f1">На Email</label>
             </li>
             <li>
-              <input class="uk-hidden" type="checkbox" id="f2" name="f2">
+              <input class="uk-hidden" type="checkbox" id="f2" name="f2" checked="">
               <label for="f2">В месседжеры</label>
             </li>
           </ul>
@@ -70,7 +70,7 @@
           <p>Когда приглашенный сделает первую покупку по вашей ссылке, вы поулчите 100 балов на счет</p>
         </div>
 
-        <button class="profile__edit uk-hidden@l" type="button">Изменить
+        <button class="profile__edit uk-hidden@l" type="button" data-uk-toggle="target: #popupEddit">Изменить
           профиль</button>
 
       </div>
