--- a/src/sass/layout/_account.scss
+++ b/src/sass/layout/_account.scss
@@ -1,10 +1,11 @@
 .account {
   &__wrapper {
-    padding-top: 20px;
-
     @include screen(xl) {
-      padding-left: 0;
-      padding-right: 0;
+      padding: 0;
+    }
+
+    @include screen(l) {
+      padding-top: 20px;
     }
   }
 
@@ -20,6 +21,7 @@
 
     @include screen(xl) {
       overflow: scroll;
+      padding: 0 15px;
     }
 
     @include screen(l) {
@@ -162,7 +164,7 @@
 
       &__container {
         border-radius: 15px;
-        font: normal 14px/24px Roboto;
+        font: normal 14px/24px FuturaPT;
 
         @include screen(xl) {
           padding: 20px;
