feature: adds remarks checkout

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -828,7 +828,37 @@
   </div>
 </div>
 
-
+<!-- SelectCity -->
+<div id="popupSelectCity" class="popup popup--select-city uk-flex-top" data-uk-modal>
+  <div class="popup__dialog popup__dialog--medium uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+    <svg class="popup__close uk-modal-close-default" width="30" height="30">
+      <use xlink:href="img/symbol/sprite.svg#close" />
+    </svg>
+    <div class="popup__header">
+      <h2 class="title title--small uk-text-center">Выберите город</h2>
+    </div>
+    <div class="popup__content">
+      <input type="text" placeholder="Введите название своего города">
+      <ul class="uk-flex uk-flex-wrap">
+        <li class="active">
+          <a href="#">Москва</a>
+        </li>
+        <li>
+          <a href="#">Санкт-Петербург</a>
+        </li>
+        <li>
+          <a href="#">Ростов на Дону</a>
+        </li>
+        <li>
+          <a href="#">Новгород</a>
+        </li>
+        <li>
+          <a href="#">Казань</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 
 <script defer src="js/library.min.js"></script>
 <script defer src="js/scripts.min.js"></script>
