--- a/src/sass/layout/_checkout.scss
+++ b/src/sass/layout/_checkout.scss
@@ -298,44 +298,40 @@
       color: rgba(43, 45, 48, 0.8);
 
       @include screen(xl) {
-        text-align: center;
+        text-align: left;
       }
     }
 
     li {
-      position: relative;
-      text-align: center;
-      background: #F8F8F8;
-      cursor: pointer;
+      label {
+        position: relative;
+        text-align: center;
+        background: #f8f8f8;
+        cursor: pointer;
+        transition: transform .15s;
 
-      @include screen(xl) {
-        padding: 10px;
-        width: 50%;
-
-        border-bottom: 1px solid #E9E9E9;
-        border-right: 1px solid #E9E9E9;
-
-      }
-
-      @include screen(l) {
-        padding: 10px 10px 5px;
-      }
-
-      &:not(:last-of-type) {
-        @include screen(l) {
+        @include screen(xl) {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          padding: 10px;
+          border-bottom: 1px solid #E9E9E9;
           border-right: 1px solid #E9E9E9;
+
+        }
+
+        @include screen(l) {
+          padding: 10px 10px 5px;
         }
       }
 
-      &:first-of-type {
-        border-radius: 10px 0 0 10px;
+      div {
+        @include screen(xl) {
+          margin-right: 20px;
+        }
       }
 
-      &:last-of-type {
-        border-radius: 0 10px 10px 0;
-      }
-
-      &.active {
+      input:checked+label {
         z-index: 1;
         background-color: #ffffff;
         border: 1px solid #FF548C;
@@ -343,22 +339,28 @@
         border-radius: 10px;
         transform: scale(1.05, 1.1);
 
-        /* &::after {
-          display: block;
-          content: "";
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          margin: auto;
-          width: 85%;
-          height: 4px;
-          background-color: #FF548C;
-          border-radius: 100px 100px 0px 0px;
-        } */
-
         span {
           color: #FF548C;
+        }
+      }
+
+      &:not(:last-of-type) {
+        label {
+          @include screen(l) {
+            border-right: 1px solid #E9E9E9;
+          }
+        }
+      }
+
+      &:first-of-type {
+        label {
+          border-radius: 10px 0 0 10px;
+        }
+      }
+
+      &:last-of-type {
+        label {
+          border-radius: 0 10px 10px 0;
         }
       }
     }
@@ -367,16 +369,40 @@
   &__payment {
     .checkout__list-select {
       margin-bottom: 30px;
+    }
 
-      li {
+    li {
+      label {
+        display: block;
+        position: relative;
+        text-align: center;
+        background: #f8f8f8;
+        cursor: pointer;
+        transition: transform .15s;
+
+        @include screen(xl) {
+          padding: 10px;
+          border-bottom: 1px solid #E9E9E9;
+          border-right: 1px solid #E9E9E9;
+
+        }
+
         @include screen(l) {
           padding: 10px 10px 5px;
         }
       }
 
-      span {
-        font: 400 14px/16px Roboto;
-        color: rgba(43, 45, 48, 0.8);
+      input:checked+label {
+        z-index: 1;
+        background-color: #ffffff;
+        border: 1px solid #FF548C;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        transform: scale(1.05, 1.1);
+
+        span {
+          color: #FF548C;
+        }
       }
     }
   }
