--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -816,4 +816,80 @@
       transform: none !important;
     } */
   }
+
+  &__city {
+    display: none;
+    position: relative;
+
+    &-confirm {
+      width: 96%;
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 25px;
+      position: fixed;
+      z-index: 1000;
+      background: #FFFFFF;
+      box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+      border-radius: 20px;
+      z-index: 1000;
+
+      @include screen(xl) {
+        top: 200px;
+        left: 0;
+        right: 0;
+      }
+
+      @include screen(l) {
+        top: 10px;
+        left: 0;
+        right: 0;
+        transform: translateX(-410px);
+      }
+
+      .btn {
+        padding: 10px 15px;
+        min-width: 130px;
+        font: 500 16px/21px FuturaPT;
+        text-transform: uppercase;
+      }
+
+      ul {
+        margin-top: 15px;
+        justify-content: center;
+      }
+
+      li {
+        &:not(:last-of-type) {
+          margin-right: 10px;
+        }
+
+        &:last-of-type {
+          .btn {
+            background-color: rgb(187, 187, 187);
+
+            &:hover {
+              box-shadow: 0px 6px 30px rgba(216, 216, 216, .5);
+            }
+          }
+        }
+      }
+
+      p {
+        text-align: center;
+        font: normal 16px/21px Roboto;
+      }
+    }
+
+    &-backdrop {
+      background-color: rgba(0, 0, 0, 0.8);
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      z-index: 999;
+      width: 100%;
+      height: 100vh;
+    }
+  }
 }
