--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -1038,4 +1038,49 @@
       }
     }
   }
+
+  &--select-city {
+    input {
+      margin-bottom: 15px;
+      padding: 10px 20px;
+      width: 100%;
+      background: #EFEFF0;
+      border-radius: 8px;
+      font: normal 15px/19px FuturaPT;
+      color: #30373D;
+      border: none;
+    }
+
+    li {
+      &:not(:last-of-type) {
+        margin-right: 10px;
+        margin-bottom: 10px;
+      }
+
+      &.active {
+        a {
+          background: #6344B6;
+          box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
+          color: #ffffff;
+        }
+      }
+    }
+
+    a {
+      display: block;
+      padding: 10px 15px;
+      font: 400 16px/20px Roboto;
+      color: #30373D;
+      background: #E9E9E9;
+      box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+      border-radius: 10px;
+      transition: background-color .3s, box-shadow .3s, color .15s;
+
+      &:hover {
+        background: #6344B6;
+        box-shadow: 0px 4px 12px rgba(107, 72, 169, 0.4);
+        color: #ffffff;
+      }
+    }
+  }
 }
