feature: adds page credit

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -936,6 +936,9 @@
       <li style="margin-bottom: 10px;">
         <a href="refferal.html" style="color: #fff;">Рефералка</a>
       </li>
+      <li style="margin-bottom: 100px;">
+        <a href="credit.html" style="color: #fff;">Кредит</a>
+      </li>
     </ul>
   </div>
 </div>
